Replace slf4j/logback with log4j and javax with jetbrains annotations