@@ -19,13 +19,13 @@ import illarion.easynpc.EasyNpcScript;
 import illarion.easynpc.Lang;
 import illarion.easynpc.ParsedNpc;
 import illarion.easynpc.ScriptWriter;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.pushingpixels.flamingo.api.common.icon.ImageWrapperResizableIcon;
 import org.pushingpixels.flamingo.api.common.icon.ResizableIcon;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import javax.imageio.ImageIO;
 import javax.swing.*;
 import javax.swing.filechooser.FileFilter;
@@ -34,6 +34,7 @@ import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -49,7 +50,7 @@ final class Utils {
     /**
      * The logger instance that takes care for the logging output of this class.
      */
-    private static final Logger LOGGER = LoggerFactory.getLogger(Utils.class);
+    private static final Logger LOGGER = LogManager.getLogger();
 
     private Utils() {
     }
@@ -60,7 +61,7 @@ final class Utils {
         try {
             ClassLoader cl = Thread.currentThread().getContextClassLoader();
             image = ImageIO.read(cl.getResource(resource));
-        } catch (@Nonnull IOException e) {
+        } catch (@NotNull IOException e) {
             LOGGER.error("Failed to read image: \"{}\"", resource);
             return null;
         }
@@ -75,7 +76,7 @@ final class Utils {
      *
      * @param editor the editor that contains the script to parse
      */
-    public static void reparseSilent(@Nonnull Editor editor) { // NO_UCD
+    public static void reparseSilent(@NotNull Editor editor) { // NO_UCD
         editor.getParsedData();
     }
 
@@ -84,7 +85,7 @@ final class Utils {
      *
      * @param file the file that is the source of this script
      */
-    static void openScript(@Nonnull MainFrame frame, @Nonnull Path file) {
+    static void openScript(@NotNull MainFrame frame, @NotNull Path file) {
         try {
             int editorIndex = frame.alreadyOpen(file);
             if (editorIndex > -1) {
@@ -95,7 +96,7 @@ final class Utils {
             frame.addNewScript().loadScript(easyScript);
             frame.setCurrentTabTitle(file.getFileName().toString());
             Config.getInstance().addLastOpenedFile(file);
-        } catch (@Nonnull IOException e1) {
+        } catch (@NotNull IOException e1) {
             LOGGER.error("Reading the script failed.", e1); //$NON-NLS-1$
         }
     }
@@ -106,7 +107,7 @@ final class Utils {
      *
      * @param editor the editor that supplies the script text
      */
-    static void saveEasyNPC(@Nonnull MainFrame frame, @Nonnull Editor editor) {
+    static void saveEasyNPC(@NotNull MainFrame frame, @NotNull Editor editor) {
         Path targetFile = editor.getScriptFile();
         if (targetFile == null) {
             selectAndSaveEasyNPC(frame, editor);
@@ -124,7 +125,7 @@ final class Utils {
      *
      * @param editor the editor containing the original script.
      */
-    static void saveLuaScript(@Nonnull MainFrame frame, @Nonnull Editor editor) {
+    static void saveLuaScript(@NotNull MainFrame frame, @NotNull Editor editor) {
         ParsedNpc npc = editor.getParsedData();
         if (npc == null) {
             JOptionPane.showMessageDialog(frame, Lang.getMsg(Utils.class, "saveLuaErrors"),
@@ -135,7 +136,7 @@ final class Utils {
         JFileChooser fileDiag = new JFileChooser();
         fileDiag.setFileFilter(new FileFilter() {
             @Override
-            public boolean accept(@Nonnull File f) {
+            public boolean accept(@NotNull File f) {
                 return !f.isFile() || f.getName().endsWith(".lua"); //$NON-NLS-1$
             }
 
@@ -160,14 +161,14 @@ final class Utils {
             try {
                 ScriptWriter writer = new ScriptWriter();
                 writer.setSource(npc);
-                Writer outputWriter = new OutputStreamWriter(new FileOutputStream(targetFile), "ISO-8859-1");
+                Writer outputWriter = new OutputStreamWriter(new FileOutputStream(targetFile), StandardCharsets.ISO_8859_1);
                 writer.setWritingTarget(outputWriter);
                 writer.write();
                 outputWriter.close();
                 if (backupFile.exists()) {
                     backupFile.delete();
                 }
-            } catch (@Nonnull IOException ex) {
+            } catch (@NotNull IOException ex) {
                 if (backupFile.exists()) {
                     if (targetFile.exists()) {
                         targetFile.delete();
@@ -182,11 +183,11 @@ final class Utils {
      * Display a file selection dialog to allow the player to select a easyNPC
      * script that is load after.
      */
-    static void selectAndOpenScript(@Nonnull MainFrame frame) {
+    static void selectAndOpenScript(@NotNull MainFrame frame) {
         JFileChooser fileDiag = new JFileChooser();
         fileDiag.setFileFilter(new FileFilter() {
             @Override
-            public boolean accept(@Nonnull File f) {
+            public boolean accept(@NotNull File f) {
                 return !f.isFile() || f.getName().endsWith(".npc"); //$NON-NLS-1$
             }
 
@@ -211,11 +212,11 @@ final class Utils {
      *
      * @param editor the editor that supplies the script text
      */
-    static void selectAndSaveEasyNPC(@Nonnull MainFrame frame, @Nonnull Editor editor) {
+    static void selectAndSaveEasyNPC(@NotNull MainFrame frame, @NotNull Editor editor) {
         JFileChooser fileDiag = new JFileChooser();
         fileDiag.setFileFilter(new FileFilter() {
             @Override
-            public boolean accept(@Nonnull File f) {
+            public boolean accept(@NotNull File f) {
                 return !f.isFile() || f.getName().endsWith(".npc"); //$NON-NLS-1$
             }
 
@@ -242,7 +243,7 @@ final class Utils {
         editor.saved();
     }
 
-    static void uploadLuaScript(@Nonnull MainFrame frame, @Nonnull Editor editor) {
+    static void uploadLuaScript(@NotNull MainFrame frame, @NotNull Editor editor) {
         ParsedNpc npc = editor.getParsedData();
         if (npc == null) {
             JOptionPane.showMessageDialog(frame, Lang.getMsg(Utils.class, "uploadLuaErrors"),
@@ -264,11 +265,11 @@ final class Utils {
             String script = stringWriter.toString();
 
             Base64.Encoder b64Encoder = Base64.getUrlEncoder();
-            String base64Script = b64Encoder.encodeToString(script.getBytes("UTF-8"));
+            String base64Script = b64Encoder.encodeToString(script.getBytes(StandardCharsets.UTF_8));
 
-            String query = "script=" + URLEncoder.encode(base64Script, "UTF-8");
+            String query = "script=" + URLEncoder.encode(base64Script, StandardCharsets.UTF_8);
 
-            try (Writer output = new BufferedWriter(new OutputStreamWriter(conn.getOutputStream(), "UTF-8"))) {
+            try (Writer output = new BufferedWriter(new OutputStreamWriter(conn.getOutputStream(), StandardCharsets.UTF_8))) {
                 output.write(query);
                 output.flush();
             }
@@ -280,7 +281,7 @@ final class Utils {
             JOptionPane.showMessageDialog(frame, Lang.getMsg(Utils.class, "luaUploadInfos"),
                                           Lang.getMsg(Utils.class, "luaUploadInfosTitle"),
                                           JOptionPane.INFORMATION_MESSAGE);
-        } catch (@Nonnull IOException ex) {
+        } catch (@NotNull IOException ex) {
             LOGGER.error("Connection to host failed", ex);
         }
     }
@@ -292,7 +293,7 @@ final class Utils {
      * @param editor the editor supplying the script
      * @param targetFile the file that is the target of this writing operation
      */
-    private static void saveEasyNPCImpl(@Nonnull Editor editor, @Nonnull Path targetFile) {
+    private static void saveEasyNPCImpl(@NotNull Editor editor, @NotNull Path targetFile) {
         try {
             @Nullable Path backupFile = Files.createTempFile(targetFile.getParent(), "npc_", ".bak");
             if (Files.isReadable(targetFile)) {
@@ -307,7 +308,7 @@ final class Utils {
                 EasyNpcScript.COPYRIGHT_HEADER.writeTo(bufferedWriter);
                 bufferedWriter.write(scriptText);
                 bufferedWriter.flush();
-            } catch (@Nonnull Exception e) {
+            } catch (@NotNull Exception e) {
                 if (backupFile != null) {
                     Files.copy(backupFile, targetFile, StandardCopyOption.REPLACE_EXISTING);
                 }
@@ -315,7 +316,7 @@ final class Utils {
             if (backupFile != null) {
                 Files.deleteIfExists(backupFile);
             }
-        } catch (@Nonnull Exception e) {
+        } catch (@NotNull Exception e) {
             LOGGER.error("Writing the easyNPC Script failed.", e); //$NON-NLS-1$
         }
     }
